customers_main.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-supervisely[apps]
+# supervisely[apps]
+supervisely
+typer
+tensorboard
+
+# used to print cool text to stdout
+# art==5.7 
+
+# # my favorite code formatter
+# black==22.6.0 
