--- a/config.json
+++ b/config.json
@@ -1,11 +1,16 @@
 {
-    "release": { "version":"v0.0.3", "name":"init" },
+    "release": { "version":"v0.0.5", "name":"init" },
     "slug": "grokhi/cli-tensorboard",
     "name": "Supervisely cli tensorboard",
-    "main_script": "src/main.py",
+    "entrypoint": "sh run.sh",
     "headless": true,
     "description": "Demonstrates how to turn your python script into Supervisely App",
     "categories": ["development"],
     "icon": "https://user-images.githubusercontent.com/12828725/182186256-5ee663ad-25c7-4a62-9af1-fbfdca715b57.png",
-    "poster": "https://user-images.githubusercontent.com/12828725/182181033-d0d1a690-8388-472e-8862-e0cacbd4f082.png"
+    "poster": "https://user-images.githubusercontent.com/12828725/182181033-d0d1a690-8388-472e-8862-e0cacbd4f082.png",
+    "context_menu": {
+      "target": [
+        "images_project"
+      ]
+    }
 }
