--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-# supervisely[apps]
 supervisely
 typer
 tensorboard
-# torch
-
-# used to print cool text to stdout
-# art==5.7 
-
-# # my favorite code formatter
-# black==22.6.0 
+poetry
+torch
