--- a/config.json
+++ b/config.json
@@ -1,16 +1,26 @@
 {
-    "release": { "version":"v0.0.31", "name":"init" },
+    "release": { "version":"v0.0.71", "name":"init" },
     "slug": "grokhi/cli-tensorboard",
     "name": "Supervisely cli tensorboard",
-    "entrypoint": "sh run.sh",
-    "headless": true,
+    "type": "app",
+    "version": "2.0.0",
     "description": "Demonstrates how to turn your python script into Supervisely App",
     "categories": ["development"],
     "icon": "https://user-images.githubusercontent.com/12828725/182186256-5ee663ad-25c7-4a62-9af1-fbfdca715b57.png",
     "poster": "https://user-images.githubusercontent.com/12828725/182181033-d0d1a690-8388-472e-8862-e0cacbd4f082.png",
+    "entrypoint": "sh run.sh",
+    "port": 8000,
+    "proxyKeepUrl": true,
+    "integrated_into": ["standalone"],
+    "store_data_on_agent": true,
+    "community_agent": false,
     "context_menu": {
       "target": [
-        "images_project"
+        "images_project",
+        "videos_project",
+        "volumes_project",
+        "point_cloud_project",
+        "point_cloud_episodes_project"
       ]
     }
 }
