--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "release": { "version":"v0.0.89", "name":"init" },
+    "release": { "version":"v0.0.91", "name":"init" },
     "slug": "grokhi/cli-tensorboard",
-    "name": "Supervisely cli tensorboard",
+    "name": "Training tensorboard template",
     "type": "app",
     "version": "2.0.0",
-    "description": "Demonstrates how to turn your python script into Supervisely App",
+    "description": "Training tenorboard app integrated into supervisely ecosystem. Use github repo for modifying template.",
     "categories": ["development"],
     "icon": "https://user-images.githubusercontent.com/12828725/182186256-5ee663ad-25c7-4a62-9af1-fbfdca715b57.png",
     "poster": "https://user-images.githubusercontent.com/12828725/182181033-d0d1a690-8388-472e-8862-e0cacbd4f082.png",
