--- a/local.env
+++ b/local.env
@@ -1,4 +1,4 @@
-context.teamId=449
-context.workspaceId=691
-context.projectId=17732
-TASK_ID=28737
+TASK_ID=29463
+WORKSPACE_ID=691
+PROJECT_ID=17732
+TEAM_ID=449
