--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 # supervisely
 # /home/grokhi/supervisely/sdk/supervisely
 git+https://github.com/supervisely/supervisely.git@cli_tensorboard
-typer
 tensorboard
-# torch
+torch
 # tensorflow
