--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "release": { "version":"v0.1.56", "name":"init" },
-    "slug": "grokhi/cli-tensorboard",
+    "slug": "supervisely/training-tensorboard-template",
     "name": "Training tensorboard template",
     "type": "app",
     "version": "2.0.0",
