--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "Python: Current File",
             "type": "python",
@@ -12,6 +11,12 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
+            "args": [
+                "--input-dir",
+                "/Users/max/input",
+                "--output-dir",
+                "/Users/max/output",
+            ]
         }
     ]
 }
