--- a/config.json
+++ b/config.json
@@ -1,28 +1,18 @@
 {
-    "release": { "version":"v0.1.66", "name":"init" },
-    "slug": "grokhi/cli-tensorboard",
-    "name": "Training tensorboard template",
-    "type": "app",
-    "version": "2.0.0",
-    "description": "Training tenorboard app integrated into supervisely ecosystem. Use github repo for modifying template.",
-    "categories": ["development"],
-    "icon": "https://user-images.githubusercontent.com/12828725/182186256-5ee663ad-25c7-4a62-9af1-fbfdca715b57.png",
-    "poster": "https://user-images.githubusercontent.com/12828725/182181033-d0d1a690-8388-472e-8862-e0cacbd4f082.png",
-    "entrypoint": "sh -e run.sh",
-    "port": 8000,
-    "proxyKeepUrl": true,
-    "integrated_into": ["standalone"],
-    "store_data_on_agent": true,
-    "community_agent": false,
-    "context_menu": {
-      "target": [
-        "images_project"
-      ],
-      "_backup": [
-        "videos_project",
-        "volumes_project",
-        "point_cloud_project",
-        "point_cloud_episodes_project"
-      ]
-    }
+  "name": "Training tensorboard template",
+  "type": "app",
+  "version": "2.0.0",
+  "description": "Training tenorboard app integrated into supervisely ecosystem. Use github repo for modifying template.",
+  "categories": ["development"],
+  "icon": "https://user-images.githubusercontent.com/12828725/182186256-5ee663ad-25c7-4a62-9af1-fbfdca715b57.png",
+  "poster": "https://user-images.githubusercontent.com/12828725/182181033-d0d1a690-8388-472e-8862-e0cacbd4f082.png",
+  "entrypoint": "sh -e run.sh",
+  "port": 8000,
+  "proxyKeepUrl": true,
+  "integrated_into": ["standalone"],
+  "store_data_on_agent": true,
+  "community_agent": false,
+  "context_menu": {
+    "target": ["images_project"]
+  }
 }
