--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
   "categories": ["development"],
   "icon": "https://user-images.githubusercontent.com/12828725/182186256-5ee663ad-25c7-4a62-9af1-fbfdca715b57.png",
   "poster": "https://user-images.githubusercontent.com/12828725/182181033-d0d1a690-8388-472e-8862-e0cacbd4f082.png",
+  "docker_image": "supervisely/training-tensorboard-template:latest",
   "entrypoint": "sh -e run.sh",
   "port": 8000,
   "proxyKeepUrl": true,
