--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
   "store_data_on_agent": true,
   "community_agent": false,
   "context_menu": {
+    "context_root": "Neural Networks",
     "target": ["images_project"]
   }
 }
