--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
   "version": "2.0.0",
   "description": "Training tenorboard app integrated into supervisely ecosystem. Use github repo for modifying template.",
   "categories": ["development"],
-  "icon": "https://user-images.githubusercontent.com/12828725/182186256-5ee663ad-25c7-4a62-9af1-fbfdca715b57.png",
-  "poster": "https://user-images.githubusercontent.com/12828725/182181033-d0d1a690-8388-472e-8862-e0cacbd4f082.png",
+  "icon": "https://user-images.githubusercontent.com/12828725/228046357-2a325f87-710a-46e4-ac75-398af5d91f21.png",
+  "poster": "https://user-images.githubusercontent.com/12828725/228047393-639c9294-214d-4b1a-9b70-c9eec48adb50.jpg",
   "docker_image": "supervisely/training-tensorboard-template:latest",
   "entrypoint": "sh -e run.sh",
   "port": 8000,
