--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "name": "Training tensorboard template",
   "type": "app",
   "version": "2.0.0",
-  "description": "Training tenorboard app integrated into supervisely ecosystem. Use github repo for modifying template.",
+  "description": "Simple integration of NN training with tensorboard support.",
   "categories": ["development"],
   "icon": "https://user-images.githubusercontent.com/12828725/228046357-2a325f87-710a-46e4-ac75-398af5d91f21.png",
   "poster": "https://user-images.githubusercontent.com/12828725/228047393-639c9294-214d-4b1a-9b70-c9eec48adb50.jpg",
