--- a/config.json
+++ b/config.json
@@ -3,7 +3,15 @@
   "type": "app",
   "version": "2.0.0",
   "description": "Simple integration of NN training with tensorboard support.",
-  "categories": ["development"],
+    "categories": [
+    "neural network",
+    "train",
+    "object detection",
+    "semantic segmentation",
+    "instance segmentation",
+    "classification",
+    "nn tools"
+  ],
   "icon": "https://user-images.githubusercontent.com/12828725/228046357-2a325f87-710a-46e4-ac75-398af5d91f21.png",
   "poster": "https://user-images.githubusercontent.com/12828725/228047393-639c9294-214d-4b1a-9b70-c9eec48adb50.jpg?q=1",
   "docker_image": "supervisely/training-tensorboard-template:latest",
