--- a/config.json
+++ b/config.json
@@ -4,9 +4,7 @@
   "version": "2.0.0",
   "description": "Simple integration of NN training with tensorboard support.",
     "categories": [
-    "neural network",
-    "train",
-    "nn tools"
+    "development"
   ],
   "icon": "https://user-images.githubusercontent.com/12828725/228046357-2a325f87-710a-46e4-ac75-398af5d91f21.png",
   "poster": "https://user-images.githubusercontent.com/12828725/228047393-639c9294-214d-4b1a-9b70-c9eec48adb50.jpg?q=1",
