--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-supervisely==6.70.13
+git+https://github.com/supervisely/supervisely.git@add_new_attr_to_progress
 tensorboard==2.12.0
 torch==2.0.0
