--- a/config.json
+++ b/config.json
@@ -3,23 +3,15 @@
   "type": "app",
   "version": "2.0.0",
   "description": "Simple integration of NN training with tensorboard support.",
-    "categories": [
-    "development"
-  ],
+  "categories": ["development"],
   "icon": "https://user-images.githubusercontent.com/12828725/228046357-2a325f87-710a-46e4-ac75-398af5d91f21.png",
   "poster": "https://user-images.githubusercontent.com/12828725/228047393-639c9294-214d-4b1a-9b70-c9eec48adb50.jpg?q=1",
-  "entrypoint": "sh -e run.sh",
-  "port": 8000,
-  "proxyKeepUrl": true,
+  "entrypoint": "test.py",
   "integrated_into": ["standalone"],
   "store_data_on_agent": true,
   "community_agent": false,
   "context_menu": {
     "context_root": "Neural Networks",
-    "target": [
-      "images_project",
-      "videos_project",
-      "volumes_project"
-    ]
+    "target": ["images_project", "videos_project", "volumes_project"]
   }
 }
