--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # git+https://github.com/supervisely/supervisely.git@cli_upload
-git+https://github.com/supervisely/supervisely.git@add_new_attr_to_progress
-# /home/grokhi/supervisely/sdk/supervisely
+# git+https://github.com/supervisely/supervisely.git@add_new_attr_to_progress
+/home/grokhi/supervisely/sdk/supervisely
 # tensorboard==2.12.0
 # torch==2.0.0
