--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
   "categories": ["development"],
   "icon": "https://user-images.githubusercontent.com/12828725/228046357-2a325f87-710a-46e4-ac75-398af5d91f21.png",
   "poster": "https://user-images.githubusercontent.com/12828725/228047393-639c9294-214d-4b1a-9b70-c9eec48adb50.jpg?q=1",
-  "entrypoint": "python3 test.py",
+  "entrypoint": "python3 test_instance.py",
   "integrated_into": ["standalone"],
   "store_data_on_agent": true,
   "community_agent": false,
