--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # supervisely==6.70.13
-git+https://github.com/supervisely/supervisely.git@multiple-logs
+# git+https://github.com/supervisely/supervisely.git@multiple-logs
+/home/grokhi/supervisely/sdk/supervisely
 tensorboard==2.12.0
 torch==2.0.0
