--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-# supervisely==6.70.13
-git+https://github.com/supervisely/supervisely.git@multiple-logs
-# /home/grokhi/supervisely/sdk/supervisely
+supervisely==6.72.3
 tensorboard==2.12.0
 torch==2.0.0
