remove from volumes_project context menu

--- a/config.json
+++ b/config.json
@@ -21,8 +21,7 @@
   "context_menu": {
     "context_root": "Neural Networks",
     "target": [
-      "images_project",
-      "volumes_project"
+      "images_project"
     ]
   }
 }
